--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -60,6 +60,11 @@ jobs:
       run: |
         javac buggyj.java
 
+    - if: matrix.language == 'cpp'
+      name: build cpp
+      run: |
+        g++ fail.cpp
+
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
 
